# src/api/routes/usersRoutes.js
@@ -2,12 +2,24 @@ const router = require("express").Router();
 const UsersController = require("../controllers/UsersController");
 const errorMiddleware = require("../middlewares/errorMiddleware");
 const { tryCatch } = require("../utils/tryCatch");
+const passport = require("passport");
+const admin = require("../middlewares/adminAuthenticate");
 
 //get all user
-router.get("/", tryCatch(UsersController.getAllUsers));
+router.get(
+  "/",
+  passport.authenticate("jwt", { session: false }),
+  tryCatch(admin),
+  tryCatch(UsersController.getAllUsers)
+);
 
 //user by id
-router.get("/:id", tryCatch(UsersController.getUserById));
+router.get(
+  "/:id",
+  passport.authenticate("jwt", { session: false }),
+  tryCatch(admin),
+  tryCatch(UsersController.getUserById)
+);
 
 router.use(errorMiddleware);
 
